--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,15 @@
 
 <body>
   <app-root></app-root>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2DMJ6GVH9Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2DMJ6GVH9Y');
+</script>
 </body>
 
 </html>
